force-app/main/default/objects/PerformanceExperimentEvent__e/PerformanceExperimentEvent__e.object-meta.xml
<CustomObject>
    <description>Fired when a scenario execution needs to be executed.</description>
    <label>Performance Experiment Event</label>
    <pluralLabel>Performance Experiment Events</pluralLabel>
</CustomObject>