force-app/main/default/objects/PerformanceExperimentEvent__e/fields/ExperimentName__c.field-meta.xml
<CustomField>
    <fullName>ExperimentName__c</fullName>
    <description>Name of Experiment</description>
    <label>ExperimentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>