force-app/main/default/objects/PerformanceExperimentEvent__e/fields/IsFinal__c.field-meta.xml
<CustomField>
    <fullName>IsFinal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fired when the Test Suite execution is completed</description>
    <inlineHelpText>Fired when the Test Suite execution is completed</inlineHelpText>
    <label>Is Final</label>
    <type>Checkbox</type>
</CustomField>