force-app/main/default/objects/PerformanceExperimentEvent__e/fields/NextExperimentName__c.field-meta.xml
<CustomField>
    <fullName>NextExperimentName__c</fullName>
    <description>Name of next Experiment</description>
    <label>Next Experiment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>