force-app/main/default/objects/PerformanceExperimentEvent__e/fields/NextStepSize__c.field-meta.xml
<CustomField>
    <fullName>NextStepSize__c</fullName>
    <label>Next Step Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>