force-app/main/default/objects/PerformanceExperimentEvent__e/fields/SuiteName__c.field-meta.xml
<CustomField>
    <fullName>SuiteName__c</fullName>
    <label>Suite Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>