force-app/main/default/objects/PerformanceExperimentEvent__e/fields/totalExecutions__c.field-meta.xml
<CustomField>
    <fullName>totalExecutions__c</fullName>
    <label>Total Execution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>